# Live-Wetter

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build-pwa.ps1  index.html  sync-pwa-assets.ps1  update-pages.ps1
.github/workflows/: pages.yml
assets/: main.css  radar-map.html
docs/: index.html  register-sw.js
docs/assets/: main-dxha8672bcd6cbbae3c.css  nerdies_weather-dxh2c3eced1a767bef5.js  nerdies_weather-dxh4e8c5b77ef4d83da.js  nerdies_weather-dxh5a712d5642e62ac0.js  nerdies_weather-dxhb4b58c6674939bd5.js  nerdies_weather_bg-dxh34c9b30f47f3e86.wasm  nerdies_weather_bg-dxh9e1e41531e5de3.wasm  nerdies_weather_bg-dxh9edfd65210c31bf.wasm  nerdies_weather_bg-dxhac47d29eb347d35e.wasm
pwa/: manifest.webmanifest  sw.js
src/: main.rs
