[package]
name = "nerdies_weather"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
dioxus = { version = "=0.7.3", features = ["web"] }
futures = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"

[features]
default = ["web"]
web = ["dioxus/web"]
